--- a/src/app/pages/registrar/registrar.page.html
+++ b/src/app/pages/registrar/registrar.page.html
@@ -12,6 +12,16 @@
 <ion-content class="ion-padding">
   <form (ngSubmit)="register()">
     <ion-item>
+      <ion-label position="floating">Nombre</ion-label>
+      <ion-input
+        type="text"
+        [(ngModel)]="name"
+        name="name"
+        required
+      ></ion-input>
+    </ion-item>
+
+    <ion-item>
       <ion-label position="floating">Correo Electrónico</ion-label>
       <ion-input
         type="email"
