--- a/src/app/pages/registrar/registrar.page.html
+++ b/src/app/pages/registrar/registrar.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button routerLink="/home">
+      <ion-button routerLink="/login">
         <ion-icon name="arrow-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <form (ngSubmit)="register()">
+  <form (submit)="register()">
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
       <ion-input
@@ -18,6 +18,7 @@
         [(ngModel)]="name"
         name="name"
         required
+        autocomplete="name"
       ></ion-input>
     </ion-item>
 
@@ -28,6 +29,7 @@
         [(ngModel)]="email"
         name="email"
         required
+        autocomplete="email"
       ></ion-input>
     </ion-item>
 
@@ -38,12 +40,21 @@
         [(ngModel)]="password"
         name="password"
         required
+        autocomplete="new-password"
       ></ion-input>
     </ion-item>
 
-    <ion-button expand="block" type="submit">Registrarse</ion-button>
+    <ion-button
+      expand="block"
+      type="submit"
+      color="primary"
+      class="ion-margin-top"
+    >
+      Registrarse
+    </ion-button>
   </form>
-  <ion-button expand="block" routerLink="/home" fill="clear">
-    Volver al inicio
+
+  <ion-button expand="block" routerLink="/login" fill="clear" color="medium">
+    ¿Ya tienes una cuenta? Inicia sesión
   </ion-button>
 </ion-content>
