--- a/src/app/pages/tracker/tracker.page.html
+++ b/src/app/pages/tracker/tracker.page.html
@@ -1,13 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>tracker</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tracker</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<ion-button
+  expand="block"
+  color="primary"
+  routerLink="/form"
+  class="custom-button"
+>
+  Añadir entrada
+</ion-button>
