--- a/src/app/pages/form/form.page.html
+++ b/src/app/pages/form/form.page.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Registrar Entrada</ion-title>
+    <ion-buttons slot="start">
+      <ion-button routerLink="/tracker">
+        <ion-icon name="arrow-back-outline"></ion-icon>
+        Volver
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Registrar entrada de mi día</ion-title>
   </ion-toolbar>
 </ion-header>
 
