--- a/src/app/pages/tracker/tracker.page.html
+++ b/src/app/pages/tracker/tracker.page.html
@@ -6,3 +6,9 @@
 >
   Añadir entrada
 </ion-button>
+<ion-buttons slot="end">
+  <ion-button (click)="logout()">
+    <ion-icon name="log-out-outline"></ion-icon>
+    Logout
+  </ion-button>
+</ion-buttons>
