--- a/src/app/pages/tracker/tracker.page.html
+++ b/src/app/pages/tracker/tracker.page.html
@@ -6,6 +6,9 @@
 >
   Añadir entrada
 </ion-button>
+<ion-button expand="block" color="secondary" routerLink="/visualizar">
+  Ver Mis Entradas
+</ion-button>
 <ion-buttons slot="end">
   <ion-button (click)="logout()">
     <ion-icon name="log-out-outline"></ion-icon>
