--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -9,6 +9,8 @@
   </ion-toolbar>
 </ion-header>
 
+<img src="assets/images/logo3.png" alt="" />
+
 <ion-content class="ion-padding">
   <form (submit)="login()">
     <ion-item>
