--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,7 +4,7 @@
     <p class="subtitle-text">
       Comienza tu viaje hacia tu auto cuidado y bienestar.
     </p>
-
+    <img src="assets/images/logo3.png" alt="" />
     <div class="button-group">
       <ion-button
         routerLink="/login"
