--- a/src/app/pages/tracker/tracker.page.scss
+++ b/src/app/pages/tracker/tracker.page.scss
@@ -9,3 +9,8 @@ mwl-calendar-month-view {
   max-width: 400px; /* Ajusta el tamaño máximo del calendario */
   margin: auto;
 }
+
+.welcome-text {
+  font-family: "Georgia", serif;
+  font-size: 50px;
+}
